tests/unit/evaluation/minizinc/globals/roots/roots_bad.err_exp
mzn2fzn:
  error: 
  roots_bad.mzn:11 
  In constraint. 
  In 'roots' expression. 
  In 'assert' expression. 
  Assertion failure: "roots: upper bound of 's' must be a subset of the index 
  set of 'x'"
